# PURSUE-scikithep

./: .buildinfo  .gitignore  PURSUE-ScikitHEP-1.ipynb  PURSUE-ScikitHEP-2.ipynb  README.md  dev-notes.md  environment.yml  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  pyproject.toml  requirements.txt  search.html  searchindex.js
notebooks/: Exercises.ipynb  PURSUE-ScikitHEP-1.ipynb  PURSUE-ScikitHEP-2.ipynb  nb0_dictsarrs.ipynb  nb1_uprootIO.ipynb  nb2_ttrees.ipynb  nb3_combinatronics.ipynb  nb4_dimuons.ipynb  nb5_vecthist.ipynb  project-workbook.ipynb
notebooks/old/: HSFUprootLectureNotes.ipynb
