[tool.poetry]
name = "pursue-scikithep"
version = "0.2.0"poetr
description = "Scikit-HEP tutorial for PURSUE @ FNAL"
authors = ["roy <roy.cruz@upr.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-hep = "^2024.3.1"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
scikit-hep-testdata = "^0.4.43"
awkward-pandas = "^2023.8.0"


[tool.poetry.group.dev.dependencies]
jupyter-book = "^1.0.0"
jupytext = "^1.16.2"
ghp-import = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
